<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.DetailFragment">

    <ImageView
        android:id="@+id/cover"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/picture_01"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"/>

    <TextView
        android:id="@+id/title_detail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tittle_picture"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:lines="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/detail_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:lines="1" />

</LinearLayout>