<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ExistingCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/back_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"
            android:text="Existing Customer"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/email_customer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/border_image"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:hint="email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColorHint="@color/text_customer" />

            <EditText
                android:id="@+id/password_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_image"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColorHint="@color/text_customer" />

            <TextView
                android:id="@+id/text_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="#000"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:background="@drawable/border_image"
                android:text="@string/log_in"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="80dp"
                    android:text="@string/customer_account"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/text_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/customer_signup"
                    android:textColor="#000" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>